--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<li><a href= "DZ01_02_JS">RESUME JS</a></li>
 		<li><a href= "DZ03_04_JS_1way">TEST 1 JS</a></li>
 		<li><a href= "DZ03_04_JS_2way">TEST 2 JS</a></li>
+		<li><a href= "DZ05_06_JS">Блок/ТЕГ "функция" JS</a></li>
 		
 		
 		
