--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<li><a href= "DZ03_04_JS_1way">TEST 1 JS</a></li>
 		<li><a href= "DZ03_04_JS_2way">TEST 2 JS</a></li>
 		<li><a href= "DZ05_06_JS">Блок/ТЕГ "функция" JS</a></li>
+		<li><a href= "DZ07_08_JS">Массив с элементами JS</a></li>
+		
 		
 		
 		
