--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<li><a href= "DZ07_08_JS">Массив с элементами JS</a></li>
 		<li><a href= "DZ09_10_proba1">Массив с элементами с ключом 1</a></li>
 		<li><a href= "DZ09_10_proba2">Массив с элементами с ключом 2</a></li>
-		
+		<li><a href= "DZ11_12">Кнопки "вперед/назад"</a></li>
+
 		
 		
 		
