--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 		<li><a href= "DZ09_10_proba1">Массив с элементами с ключом 1</a></li>
 		<li><a href= "DZ09_10_proba2">Массив с элементами с ключом 2</a></li>
 		<li><a href= "DZ11_12">Кнопки "вперед/назад"</a></li>
-
+		<li><a href= "DZ13_14_toggle">Всплывающее меню и форма"</a></li>
 		
 		
-		
-		
+				
 	</ul>
 	
 
