--- a/DZ13_14_toggle/index.html
+++ b/DZ13_14_toggle/index.html
@@ -20,22 +20,10 @@
 			</ul>
 		</nav>
 		<form class="callback" action="" method="GET">
-			<div class="form-wrap">
-				<label>
-					<input type="text" name="name" required placeholder="Имя ">
-				</label>
-				<label>
-					<input type="text" name="phone" required placeholder="Телефон">
-				</label>
-				<button class="close-callback" input type="submit">ОК</button>
-
-			</div>
 			
 		</form>
-		<form>
-			<button class="open-callback" input type="submit">Заказать звонок</button>
-		</form>
 		
+			<button class="open-callback" >Заказать звонок</button>
 		
 		
 	</div>
