--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		<li><a href= "DZ09_10_proba2">Массив с элементами с ключом 2</a></li>
 		<li><a href= "DZ11_12">Кнопки "вперед/назад"</a></li>
 		<li><a href= "DZ13_14_toggle">Всплывающее меню и форма"</a></li>
+		<li><a href= "DZ15_16_acordeon">Разворот меню аккордеон"</a></li>
 		
 		
-				
 	</ul>
 	
 
