--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<li><a href= "DZ11_12">Кнопки "вперед/назад"</a></li>
 		<li><a href= "DZ13_14_toggle">Всплывающее меню и форма"</a></li>
 		<li><a href= "DZ15_16_acordeon">Разворот меню аккордеон"</a></li>
+		<li><a href= "DZ17_18 _1_sposob">Форма добавление разделов html 1 способ</a></li>
+		<li><a href= "DZ17_18 _2_sposob">Форма добавление разделов html 2 способ</a></li>
 		
 		
 	</ul>
