--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		<li><a href= "DZ15_16_acordeon">Разворот меню аккордеон"</a></li>
 		<li><a href= "DZ17_18 _1_sposob">Форма добавление разделов html 1 способ</a></li>
 		<li><a href= "DZ17_18_2_sposob">Форма добавление разделов html 2 способ</a></li>
+		<li><a href= "DZ19_20_deposit_calkul">Депозитный калькулятор</a></li>
 		
+	
 	
 	</ul>
 	
