--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<li><a href= "DZ17_18 _1_sposob">Форма добавление разделов html 1 способ</a></li>
 		<li><a href= "DZ17_18_2_sposob">Форма добавление разделов html 2 способ</a></li>
 		<li><a href= "DZ19_20_deposit_calkul">Депозитный калькулятор</a></li>
+		<li><a href= "DZ21_22_DCALC_OUT_IN (2sp chek form)">Депозитный калькулятор с проверкой полей</a></li>
+		
 		
 	
 	
