--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		<li><a href= "DZ17_18_2_sposob">Форма добавление разделов html 2 способ</a></li>
 		<li><a href= "DZ19_20_deposit_calkul">Депозитный калькулятор</a></li>
 		<li><a href= "DZ21_22_DCALC_OUT_IN (2sp chek form)">Депозитный калькулятор с проверкой полей</a></li>
+		<li><a href= "DZ23_24_form_avtorizac">Анкета-опросник с проверкой полей и постепенной разблокировкой</a></li>
+		
 		
 		
 	
