--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<li><a href= "DZ19_20_deposit_calkul">Депозитный калькулятор</a></li>
 		<li><a href= "DZ21_22_DCALC_OUT_IN (2sp chek form)">Депозитный калькулятор с проверкой полей</a></li>
 		<li><a href= "DZ23_24_form_avtorizac">Анкета-опросник с проверкой полей и постепенной разблокировкой</a></li>
+		<li><a href= "DZ25_26_CLICK_POSITION">По клику смещение с задержкой</a></li>
+		<li><a href= "DZ_27_28_repl_str">Замена в строке одной подстроки на другую</a></li>
 		
 		
 		
