--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<li><a href= "DZ23_24_form_avtorizac">Анкета-опросник с проверкой полей и постепенной разблокировкой</a></li>
 		<li><a href= "DZ25_26_CLICK_POSITION">По клику смещение с задержкой</a></li>
 		<li><a href= "DZ_27_28_repl_str">Замена в строке одной подстроки на другую</a></li>
-		
+		<li><a href= "DZ29_30_filter_select">Вывод массива на экран по фильтру</a></li>
 		
 		
 	
