--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		<li><a href= "DZ25_26_CLICK_POSITION">По клику смещение с задержкой</a></li>
 		<li><a href= "DZ_27_28_repl_str">Замена в строке одной подстроки на другую</a></li>
 		<li><a href= "DZ29_30_filter_select">Вывод массива на экран по фильтру</a></li>
+		<li><a href= "DZ31_32_filter personal">Вывод всего массива на экран и по фильтру (функции)</a></li>
 		
 		
-	
 	
 	</ul>
 	
